--- a/postService/src/main/resources/application.properties
+++ b/postService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=postService
+spring.application.name=posts-service
 
-server.servlet.context-path=/api/v1/posts
+server.servlet.context-path=/posts
 server.port=9010
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postsDB
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+eurespring.eureka.instanceka.client.service-url.defaultZone= http://localhost:8761/eureka
