--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=userService
-server.servlet.context-path=/api/v1/users
+spring.application.name=user-service
+server.servlet.context-path=/users
 server.port = 9020
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/userDB
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 jwt.secretKey= akldfldkjfoiejfk1232843u49jakldidfnviiupasdkfnlkfdsjio
+
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
