--- a/ConnectionsService/src/main/resources/application.properties
+++ b/ConnectionsService/src/main/resources/application.properties
@@ -3,11 +3,10 @@ spring.application.name=connections-service
 server.port = 9030
 server.servlet.context-path= /connections
 
-spring.neo4j.uri= bolt://localhost:7687
+spring.neo4j.uri=neo4j+s://cac7d12f.databases.neo4j.io
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=password
+spring.neo4j.authentication.password=xUPzuSAHPMuyU5RKtwKs8ibQtU3uAbxuhtwJJkVMrwU
 
 spring.eureka.instance.prefer-ip-address=true
 
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
-spring.eureka.instance.hostname=localhost
