--- a/postService/pom.xml
+++ b/postService/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>com.sujal.LinkedInProject</groupId>
 	<artifactId>postService</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>postService</name>
+	<version>0.0.1</version>
+	<name>post-service</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -91,6 +91,27 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.4</version>
+				<configuration>
+					<to>
+						<image>docker.io/sujalphuse/ecommerce-${project.name}.${project.version}</image>
+						<tags>
+							<tag>latest</tag>
+						</tags>
+					</to>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
