--- a/APIGateway/src/main/resources/application.yml
+++ b/APIGateway/src/main/resources/application.yml
@@ -8,14 +8,14 @@ spring:
     gateway:
       routes:
         - id: user-service
-          uri: lb://USER-SERVICE
+          uri: ${USER_SERVICE_URI:lb://USER-SERVICE}
           predicates:
             - Path=/api/v1/users/**
           filters:
             - StripPrefix=2
 
-        - id: postService
-          uri: lb://POSTSERVICE
+        - id: posts-service
+          uri: ${POSTS_SERVICE_URI:lb://POSTSERVICE}
           predicates:
             - Path=/api/v1/posts/**
           filters:
@@ -23,7 +23,7 @@ spring:
             - name: AuthenticationFilter
 
         - id: connections-service
-          uri: lb://CONNECTIONS-SERVICE
+          uri: ${CONNECTIONS_SERVICE_URI:lb://CONNECTIONS-SERVICE}
           predicates:
             - Path=/api/v1/connections/**
           filters:
