Week 8 -> Final Completely working project, Added api-gateway and ingress, enabled content-type in postman and then create post using application/json for post's text

--- a/k8s/connections-service.yml
+++ b/k8s/connections-service.yml
@@ -31,11 +31,10 @@ spec:
           
           - name: DB_NAME
             value: connections-db
-
+          - name: KAFKA_LOG4J_ROOT_LOGLEVEL
+            value: "ERROR"
         ports:  
         - containerPort: 9030
-
-
 ---
 apiVersion: v1
 kind: Service
