--- a/APIGateway/src/main/resources/application-k8s.yml
+++ b/APIGateway/src/main/resources/application-k8s.yml
@@ -6,9 +6,13 @@ USER_SERVICE_URI: http://user-service
 POSTS_SERVICE_URI: http://posts-service
 CONNECTIONS_SERVICE_URI: http://connections-service
 NOTIFICATION_SERVICE_URI: http://notification-service
+UPLOADER_SERVICE_URI: http://uploader-service
 
 management:
   endpoints:
     web:
       exposure:
         include: "health,info"
+  endpoint:
+    health:
+      show-details: always
