--- a/k8s/connections-db.yml
+++ b/k8s/connections-db.yml
@@ -27,18 +27,18 @@ spec:
         ports:
           - containerPort: 7687
         env:
-          - name: NEO4j_AUTH
+          - name: NEO4J_AUTH
             value: "neo4j/password"
   
-          - name: NEO4j_dbms_memory_heap_initial__size       
+          - name: NEO4J_dbms_memory_heap_initial__size       
             value: "512M"
             
-          - name: NEO4j_dbms_memory_heap_max__size   
+          - name: NEO4J_dbms_memory_heap_max__size   
             value: "2G"
-          - name: NEO4j_dbms_default__listen__address  
+          - name: NEO4J_dbms_default__listen__address  
             value: "0.0.0.0"
             
-          - name: NEO4j_ACCEPT_LICENSE_AGREEMENT
+          - name: NEO4J_ACCEPT_LICENSE_AGREEMENT
             value: "yes"
 
         volumeMounts:
@@ -50,20 +50,17 @@ spec:
   - metadata:
       name: neo4j-data
     spec:
-      accessModes: [ "ReadWriteOnce" ]
+      accessModes: ["ReadWriteOnce"]
       resources:
         requests:
           storage: 2Gi
   - metadata:
       name: neo4j-logs
     spec:
-      accessModes: [ "ReadWriteOnce" ]
+      accessModes: ["ReadWriteOnce"]
       resources:
         requests:
           storage: 1Gi
-      storageClassName: "standard-rwo"
-      volumeMode: Filesystem
-
 ---
 apiVersion: v1
 kind: Service
