--- a/postService/src/main/resources/application-k8s.properties
+++ b/postService/src/main/resources/application-k8s.properties
@@ -11,8 +11,8 @@ spring.kafka.bootstrap-servers= kafka:9092
 eureka.client.register-with-eureka= false
 eureka.client.fetch-registry= false
 
-USER_SERVICE_URI: http://user-service
-POSTS_SERVICE_URI: http://posts-service
-CONNECTIONS_SERVICE_URI: http://connections-service
-NOTIFICATION_SERVICE_URI: http://notification-service
-UPLOADER_SERVICE_URI: http://uploader-service
+USER_SERVICE_URI= http://user-service
+POSTS_SERVICE_URI= http://posts-service
+CONNECTIONS_SERVICE_URI= http://connections-service
+NOTIFICATION_SERVICE_URI= http://notification-service
+UPLOADER_SERVICE_URI= http://uploader-service
