--- a/uploader-service/pom.xml
+++ b/uploader-service/pom.xml
@@ -86,7 +86,7 @@
 				<version>3.4.4</version>
 				<configuration>
 					<to>
-						<image>docker.io/sujalphuse/linkedin-app-${project.name}.${project.version}</image>
+						<image>docker.io/sujalphuse/linkedin-app-${project.name}.0.0.2</image>
 						<tags>
 							<tag>latest</tag>
 						</tags>
